# tg-prog-lang-cat

./: .gitignore  .gitmodules  Dockerfile  README.MD  TODO.MD  build.py
docker/: builder.dockerfile  tester.dockerfile
research/fasttext/: README.md  ascii_preprocessing.py  fasttext-train.ipynb  full_training.ipynb
research/libsvm/: model_libsvm_ascii_2.model  svm_inference.ipynb
research/onnx/: onnx_inference (1).py  the_stack_improved.ipynb
research/tf/tflite/: dev.csv  pyproject.toml  tf.ipynb
scripts/: run-tglang.py  tfidfer.py  tokenizer.py
src/: deb-packages.txt
src/libtglang/: CMakeLists.txt  create-header-from-blob.py  json-to-header.py  tglang.cpp
src/libtglang/include/: symbols_to_replace.h
src/libtglang/ort/: GIT_COMMIT_ID
src/libtglang/ort/include/: onnxruntime_float16.h
src/libtglang/src/: tglang.cpp
src/libtglang/train/: full_training.ipynb  train_val_data_ae
src/tglang-multitester/: CMakeLists.txt  tglang-multitester.c
src/tglang-tester/: CMakeLists.txt  tglang.h
src/train/: README.md  ascii_preprocessing.py
